StatsCollector saves day by day